# epd-photoframe-server

./: Cargo.toml  README.md
src/: background.rs  color.rs  config.rs  degraded.rs  device.rs  draw.rs  main.rs  mqtt.rs  screen_state.rs
src/config/: mod.rs
src/overlays/: battery_indicator.rs  drawable.rs  infobox.rs  mod.rs  traits.rs
