[package]
name = "epd-photoframe-server"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
image = "0.25"
epd-dither = { git = "https://github.com/Frans-Willem/epd-dither", rev = "a25d70f412f4bcab775aee28de7f0767a5cb2768", default-features = false, features = ["alloc", "image", "rand"] }
nalgebra = { version = "0.34", default-features = false, features = ["std"] }
png = "0.18"
rand = "0.9"
ab_glyph = "0.2"
chrono = "0.4"
chrono-tz = "0.10"
# `compiled_data` bakes the CLDR tables into the binary (no separate data file
# to ship). Skipping the default `ixdtf` feature: we construct calendar dates
# from chrono fields, not by parsing ISO 8601 strings.
icu_calendar = { version = "2", default-features = false, features = ["compiled_data"] }
icu_datetime = { version = "2", default-features = false, features = ["compiled_data"] }
icu_locale_core = "2"
# `sync` lets icu's data-payload Yokes hold Arc instead of Rc, so the formatters
# in `LocaleFormatters` are `Send + Sync` (required by axum's shared state).
icu_provider = { version = "2", features = ["sync"] }
iana-time-zone = "0.1"
cron = "0.16.0"
cron-lingo = "0.4.2"
humantime = "2"
time = "0.3.47"
tiny-skia = "0.12.0"
rumqttc = "0.24"
async-trait = "0.1"
futures = "0.3"
taffy = "0.10"
